--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.22.11",
+    "axios": "^1.7.9",
     "humanize-duration": "^3.32.1",
     "quill": "^2.0.3",
     "rc-progress": "^4.0.0",
@@ -18,6 +19,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
     "react-youtube": "^10.1.0",
+    "sonner": "^1.7.4",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
